# todo-cli

./: .gitignore  404.html  CHANGELOG.md  Cargo.toml  GUIDE.md  README.md  index.html  mkdocs.yml  rename.sh  sitemap.xml
CHANGELOG/: index.html
advanced/v1.2.0-struct-refactoring/: index.html
advanced/v1.3.0-json-serialization/: index.html
advanced/v1.4.0-tags-system/: index.html
advanced/v1.5.0-due-dates-tabular/: index.html
advanced/v1.6.0-professional-cli-clap/: index.html
advanced/v1.7.0-professional-error-handling/: index.html
concepts/advanced-error-handling/: index.html
concepts/cli-design/: index.html
concepts/error-handling/: index.html
concepts/file-operations/: index.html
concepts/type-safety/: index.html
docs/: CHANGELOG.md  GUIDE.md  LEARNING.md  index.md
docs/advanced/: v1.2.0-struct-refactoring.md  v1.3.0-json-serialization.md  v1.4.0-tags-system.md  v1.5.0-due-dates-tabular.md  v1.6.0-professional-cli-clap.md  v1.7.0-professional-error-handling.md
docs/concepts/: advanced-error-handling.md  cli-design.md  error-handling.md  file-operations.md  type-safety.md
docs/getting-started/: v0.1.0-basic-cli.md  v0.2.0-done-command.md  v0.3.0-remove-command.md  v0.4.0-undone-command.md  (+3 more)
search/: search_index.json
src/: cli.rs  lib.rs  main.rs  validation.rs
stylesheets/: extra.css
tests/: helpers.rs  test_add_command.rs  test_deps_command.rs  test_done_commands.rs  test_edit_command.rs  test_projects_command.rs  test_purge_command.rs  test_recur_command.rs  test_remove_command.rs  test_search_command.rs  test_undone_command.rs
(+115 files in other folders)
