[package]
name = "todo-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
colored = "3.1.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = { version = "*", features = ["serde"] }
clap = { version = "*", features = ["derive"] }
thiserror = "2.0.18"
