[package]
name = "rustodo"
version = "2.17.2"
edition = "2024"
authors = ["João Felipe Galvão <github.com/joaofelipegalvao>"]
description = "A modern, powerful task manager built with Rust"
license = "MIT"
repository = "https://github.com/joaofelipegalvao/rustodo"
readme = "README.md"
keywords = ["todo", "task-manager", "cli", "productivity", "terminal"]
categories = ["command-line-utilities"]

[lib]
name = "rustodo"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.101"
chrono = { version = "0.4.44", features = ["serde"] }
chrono-english = "0.1.8"
clap = { version = "4.5", features = ["derive", "cargo"] }
colored = "3.1.1"
directories = "6.0.0"
regex = "1.12.3"
fs4 = "0.13.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.0.3"
strsim = "0.11.1"
tempfile = "3.25.0"
thiserror = "2.0.18"
uuid = { version = "1.21.0", features = ["v4", "serde"] }

[[bin]]
name = "todo"
path = "src/main.rs"
